# cncppevo

./: .gitignore  CMakeLists.txt  cncpp.code-workspace  director.toml  machine.yml  mads.ini  path.R  path.m  plot.py  project_path.gcode  project_path_no_trc.gcode  test-x.gcode  test.gcode
R/: .Rhistory  interface.cpp
examples/less1/: a.out  test.cpp
src/: block.cpp  block.hpp  blockTRC.cpp  blockTRC.hpp  defines.hpp.in  fsm.cpp  fsm.dot  fsm.hpp  fsm_impl.hpp  machine.cpp  machine.hpp  point.cpp  point.hpp  program.cpp  program.hpp  timer.hpp
src/main/: CMakeLists.txt  cncpp-agent.cpp  cncpp.cpp  simulate.cpp
